--- a/style.css
+++ b/style.css
@@ -17,14 +17,15 @@ footer {
     position: fixed;
 }
 .header{
-    width: 100%;
-    margin:0;
+    /* width: 100%; */
+    margin:auto;
+    display: flex;
+    justify-content: space-between;
     padding: 1%;
    
     background-color: white;
     
     
-    display: flex;
 
     
 }
@@ -55,12 +56,11 @@ footer {
     margin: 0px;
     text-align: center;
 }
-#nesto{
-    flex: 50%;
+#reset{
+    
     color: red;
     background: none;
-    border: none;
-    text-align: left;
+    border: none;   
     font-weight: bold;
 
     
@@ -71,9 +71,9 @@ footer {
 #ime-takmicara{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: bold;
-    flex: 50%;
+    
     text-align: right;
-    padding-right: 25px;
+    
 
     color: black;
     
