--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ footer {
     background: none;
     border: none;   
     font-weight: bold;
+    cursor: pointer;
 
     
    
@@ -194,4 +195,4 @@ align-items: center;
 .defaultBtn {
     background-color: #fff !important;
     color: #444 !important;
-}
+} 
