--- a/style.css
+++ b/style.css
@@ -16,38 +16,48 @@ footer {
     padding: 0.5%;
     position: fixed;
 }
+
 .header{
     /* width: 100%; */
     margin:auto;
     display: flex;
     justify-content: space-between;
-    padding: 1%;
-   
+    padding: 1%;   
     background-color: white;
     
-    
-
-    
+        
 }
-.questions{
+
+.container{
     display: flex;
-    flex: auto;
-    justify-content: center;
+    flex-direction: column;
+    height: 65vh;
+    margin: 2vh;
+}
+
+.questions{
+    width: 85%;
+    padding: 50px;
+    margin: auto;
+    display: flex;
+
+    justify-content: space-between;
     
 }
 .questions button{
     font-size: 1rem;
     font-weight: 500;
   
-  padding: 15px;
-  margin: 20px;
-  border: none;
+    padding: 15px;
+    margin: 20px;
+    border: none;
   
-  background-color: #fff;
-  color: #444;
-  border-radius: 10rem;
-  cursor: pointer;
-  justify-content: space-around;
+    background-color: #fff;
+    color: #444;
+    border-radius: 10rem;
+    cursor: pointer;
+    justify-content: space-around;
+    display: block;
 
 }
 .questions h2{
@@ -72,10 +82,7 @@ footer {
 #ime-takmicara{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: bold;
-    
     text-align: right;
-    
-
     color: black;
     
 }
@@ -120,32 +127,8 @@ align-items: center;
     
 }
 
-#q_html{
-    flex: 1fr;
-    padding: 50px;
-}
-#q_html button{
-    display: block;
-   
-    
-}
-#q_css{
-    flex: 1fr;
-    padding: 50px;
-}
-#q_css button{
-    display: block;
-    
-}
-#q_js{
-    
-    flex: 1fr;
-    padding: 50px;
-}
-#q_js button{
-    display: block;
-    
-}
+
+
 #q_js div{
     display: inline-block;
 }
