--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ footer {
     width: 100%;
     background-color: black;
     text-align: center;
-    padding: 0.5%;
+    padding: 1git %;
     position: fixed;
 }
 
