--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@ body {
   background-image: linear-gradient(to right, #c31432, #240b36);
   color: blanchedalmond;
   position: relative;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  height: 100vh;
 }
 footer {
   bottom: 0px;
@@ -12,7 +15,7 @@ footer {
   background-color: black;
   text-align: center;
   padding: 1%;
-  position: fixed;
+  /* position: fixed; */
 }
 
 .header {
@@ -27,7 +30,7 @@ footer {
 .container {
   display: flex;
   flex-direction: column;
-  height: 65vh;
+  /* height: 65vh; */
   margin: 2vh;
 }
 
@@ -108,7 +111,10 @@ footer {
 #percentage {
   position: absolute;
   display: inherit;
-  right: 45%;
+
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 
   height: 1.5em;
   align-items: center;
